fixes to alignent and padding

--- a/src/components/AboutUsPage/AboutPage.css
+++ b/src/components/AboutUsPage/AboutPage.css
@@ -1,34 +1,40 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #222;
-    color: white;
-    padding: 20px;
-}
+
 
 .about-us {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    
+   color: white;
+
     margin-top: 30px;
-    padding: 0 52px;
+    padding: 0 72px;
 }
 
-.about-us p {
+.about-us-top p {
     font-family: var(--primary-font);
     color: var(--primary-white);
     display: flex;
     font-size: 30px;
     font-style: normal;
     font-weight: 400;
+    margin-bottom: 50px;
+}
+.about-us-top .about-us-h1 {
+    text-align: left;
+    font-size: var(--);
 }
 
-.about-us_top {
-    margin-top: 50px;
-    max-width: 70%;
+
+.about-us-top {
+    
     margin-bottom: 20px;
     font-size: 22px;
+    text-align: left;
+    border-bottom: 2px solid;
+    border-color: rgba(255, 255, 255, 0.2);
+    min-width: 100%;
+    
+    margin-bottom: 50px;
 }
 
 .contributor-title {
